--- a/apps/Manager/views/index.phtml
+++ b/apps/Manager/views/index.phtml
@@ -29,16 +29,16 @@
     <aside class="left-panel">
 
       <div class="user text-center">
-            <img src="/assets/manager/images/avtar/<?php echo $uinfo->image; ?>" class="img-circle" alt="...">
-            <h4 class="user-name"><?php echo (@$uinfo->name ? @$uinfo->name : @$uinfo->firstname); ?></h4>
+        <img src="/assets/manager/images/avtar/<?php echo $uinfo->image ?: 'placeholder.jpg' ; ?>" class="img-circle" alt="...">
+        <h4 class="user-name"><?php echo $uinfo->name ?: $uinfo->firstname ; ?></h4>
 
-            <div class="dropdown user-login">
-              <a href="/login/logout">
-                <button class="btn btn-xs dropdown-toggle btn-rounded" type="button" aria-expanded="true">
-                  <i class="fa fa-circle status-icon signout"></i> Encerrar Sessão
-                </button>
-              </a>
-            </div>
+        <div class="dropdown user-login">
+          <a href="/login/logout">
+            <button class="btn btn-xs dropdown-toggle btn-rounded" type="button" aria-expanded="true">
+              <i class="fa fa-circle status-icon signout"></i> Encerrar Sessão
+            </button>
+          </a>
+        </div>
       </div>
 
       <nav class="navigation">
