--- a/apps/Manager/views/projects/settings.phtml
+++ b/apps/Manager/views/projects/settings.phtml
@@ -21,11 +21,11 @@
           <div class="panel-body no-padd">
             <div class="list-group no-margn mail-nav">
               <a href="/projects" class="list-group-item">Projetos Cadastrados</a>
-              <a href="/project/overview/<?php echo $project->_; ?>" class="list-group-item">Visão Geral</a>
-              <a href="/project/tasks/<?php echo $project->_; ?>"    class="list-group-item">Tarefas</a>
-              <a href="/project/settings/<?php echo $project->_; ?>" class="list-group-item on">Configurações</a>
-              <a href="/project/feedback/<?php echo $project->_; ?>" class="list-group-item">Feedback</a>
-              <a href="/project/invoices/<?php echo $project->_; ?>" class="list-group-item">Faturas</a>
+              <a href="/project/<?php echo $project->_; ?>/overview" class="list-group-item">Visão Geral</a>
+              <a href="/project/<?php echo $project->_; ?>/tasks"    class="list-group-item">Tarefas</a>
+              <a href="/project/<?php echo $project->_; ?>/settings" class="list-group-item on">Configurações</a>
+              <a href="/project/<?php echo $project->_; ?>/feedback" class="list-group-item">Feedback</a>
+              <a href="/project/<?php echo $project->_; ?>/invoices" class="list-group-item">Faturas</a>
             </div>
           </div>
         </div>
