--- a/apps/Manager/views/projects/overview.phtml
+++ b/apps/Manager/views/projects/overview.phtml
@@ -21,11 +21,11 @@
           <div class="panel-body no-padd">
             <div class="list-group no-margn mail-nav">
               <a href="/projects" class="list-group-item">Projetos Cadastrados</a>
-              <a href="/project/overview/<?php echo $project->_; ?>" class="list-group-item on">Visão Geral</a>
-              <a href="/project/tasks/<?php echo $project->_; ?>"    class="list-group-item">Tarefas</a>
-              <a href="/project/settings/<?php echo $project->_; ?>" class="list-group-item">Configurações</a>
-              <a href="/project/feedback/<?php echo $project->_; ?>" class="list-group-item">Feedback</a>
-              <a href="/project/invoices/<?php echo $project->_; ?>" class="list-group-item">Faturas</a>
+              <a href="/project/<?php echo $project->_; ?>/overview" class="list-group-item on">Visão Geral</a>
+              <a href="/project/<?php echo $project->_; ?>/tasks"    class="list-group-item">Tarefas</a>
+              <a href="/project/<?php echo $project->_; ?>/settings" class="list-group-item">Configurações</a>
+              <a href="/project/<?php echo $project->_; ?>/feedback" class="list-group-item">Feedback</a>
+              <a href="/project/<?php echo $project->_; ?>/invoices" class="list-group-item">Faturas</a>
             </div>
           </div>
         </div>
@@ -53,7 +53,7 @@
                 </div>
 
                 <div class="col-lg-6 col-md-6">
-                  <div data-chart="/project/chart/<?php echo $project->_; ?>" style="height:250px;"></div>
+                  <div data-chart="/project/<?php echo $project->_; ?>/chart" style="height:250px;"></div>
                 </div>
 
                 <?php if($project->description): ?>
@@ -87,7 +87,7 @@
                                 <span class="label label-default"><?php echo $member->department; ?></span>
                               </td>
                               <td>
-                                <form method="post" class="validator-form" action="/project/member/remove/<?php echo "{$project->_}/{$member->uid}" ;?>" novalidate="novalidate">
+                                <form method="post" class="validator-form" action="/project/<?php echo $project->_; ?>/member/remove/<?php echo {$member->uid ;?>" novalidate="novalidate">
                                   <?php echo $form->render("security"); ?>
                                   <button type="submit" class="btn btn-danger pull-right">
                                     <span class="fa fa-close"></span>
