--- a/public/assets/manager/css/app/custom.css
+++ b/public/assets/manager/css/app/custom.css
@@ -136,3 +136,7 @@
   background-color: #D4D4D4 !important;
   border: 1px solid #9e9e9e !important;
 }
+
+button:focus{
+  outline: none !important;
+}
