--- a/apps/Manager/views/projects/tasks.phtml
+++ b/apps/Manager/views/projects/tasks.phtml
@@ -81,7 +81,7 @@
                                   <span class="fa fa-info-circle"></span>
                                   Info
                                 </button>
-                                <button type="button" class="btn btn-primary" data-toggle="modal" data-ajax="/project/<?php echo $project->_; ?>/tasks/modify/<?php echo $task->_; ?>>">
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-ajax="/project/<?php echo $project->_; ?>/tasks/modify/<?php echo $task->_; ?>">
                                   <span class="fa fa-pencil"></span>
                                   Editar
                                 </button>
