--- a/apps/Manager/views/projects/overview.phtml
+++ b/apps/Manager/views/projects/overview.phtml
@@ -71,7 +71,7 @@
                   <div class="panel panel-default">
                     <div class="panel-heading space-between">
                       Membros do Projeto
-                      <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#add" >
+                      <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-ajax="/project/<?php echo $project->_; ?>/member/create" >
                         <span class="fa fa-plus"></span> Adicionar Membro
                       </button>
                     </div>
@@ -87,12 +87,9 @@
                                 <span class="label label-default"><?php echo $member->department; ?></span>
                               </td>
                               <td>
-                                <form method="post" class="validator-form" action="/project/<?php echo $project->_; ?>/member/remove/<?php echo {$member->uid ;?>" novalidate="novalidate">
-                                  <?php echo $form->render("security"); ?>
-                                  <button type="submit" class="btn btn-danger pull-right">
-                                    <span class="fa fa-close"></span>
-                                  </button>
-                                </form>
+                                <button type="button" class="btn btn-danger pull-right" data-toggle="modal" data-ajax="/project/<?php echo $project->_; ?>/member/remove/<?php echo $member->uid ;?>">
+                                  <span class="fa fa-close"></span>
+                                </button>
                               </td>
                             </tr>
                           <?php endforeach; ?>
@@ -108,20 +105,20 @@
                   <?php
                     foreach($logs as $log):
                       switch ($log->action) {
-                        case $this->logs->create : $cl = "success"; $icon = "check";       $action = "Criação";     break;
-                        case $this->logs->update : $cl = "primary"; $icon = "retweet";     $action = "Alteração";   break;
-                        case $this->logs->delete : $cl = "danger";  $icon = "trash";       $action = "Remoção";     break;
-                        case $this->logs->info   : $cl = "info";    $icon = "info-circle"; $action = "Informação";  break;
+                        case $this->logs->create : $l = [ 'class' => "success",  'icon' => "check",       'title' => "Criação"];     break;
+                        case $this->logs->update : $l = [ 'class' => "primary",  'icon' => "retweet",     'title' => "Alteração"];   break;
+                        case $this->logs->delete : $l = [ 'class' => "danger",   'icon' => "trash",       'title' => "Remoção"];     break;
+                        case $this->logs->info   : $l = [ 'class' => "info",     'icon' => "info-circle", 'title' => "Informação"];  break;
                       }
                   ?>
                   <li class="clearfix">
                       <time class="tl-time">
-                          <h3 class="text-<?php echo $cl; ?>"><?php echo $action ?></h3>
+                          <h3 class="text-<?php echo $l['class']; ?>"><?php echo $l['title']; ?></h3>
                           <p><?php echo (new \DateTime($log->date))->format("d-m-Y \a\s H:i"); ?></p>
                         </time>
-                        <i class="fa fa-<?php echo $icon; ?> bg-<?php echo $cl; ?> tl-icon text-white"></i>
+                        <i class="fa fa-<?php echo $l['icon']; ?> bg-<?php echo $l['class']; ?> tl-icon text-white"></i>
                         <div class="tl-content">
-                          <div class="panel panel-<?php echo $cl; ?>">
+                          <div class="panel panel-<?php echo $l['class']; ?>">
                                 <div class="panel-body">
                                   <?php echo $log->description; ?>
                                 </div>
@@ -139,42 +136,4 @@
 
 </div>
 
-<!-- add member -->
-<div class="modal fade" id="add" tabindex="-1" role="dialog" aria-labelledby="addLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="addLabel">Adicionar Membros ao Projeto</h4>
-      </div>
-
-      <form role="form" method="post" accept-charset="utf8" action="/project/member/new/<?php echo $project->_; ?>" class="validator-form" >
-        <div class="modal-body">
-
-          <?php echo $form->render("security"); ?>
-
-          <div class="alert hidden " role="alert">
-            <h4 id="title"></h4>
-            <p id="desc"></p>
-          </div>
-
-          <div class="row">
-            <div class="col-md-12">
-
-              <label class="control-label">Membros</label>
-              <div class="form-group has-feedback">
-                <?php echo $form->render("members"); ?>
-              </div>
-
-            </div>
-          </div>
-
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-          <button type="submit" class="btn btn-primary">Adicionar</button>
-        </div>
-      </form>
-    </div>
-  </div>
-</div>
+<div id="modal-results"></div>
