--- a/apps/Manager/views/tasks/index.phtml
+++ b/apps/Manager/views/tasks/index.phtml
@@ -43,10 +43,10 @@
         <table class="table table-striped no-margn">
             <thead>
               <tr>
+                <th>Criado</th>
                 <th>Deadline</th>
                 <th>Projeto</th>
                 <th>Tarefa</th>
-                <th>Descrição</th>
                 <th><i class="fa fa-gears"></i></th>
               </tr>
             </thead>
@@ -54,16 +54,19 @@
               <?php foreach($tasks as $task): ?>
                 <tr data-searchable data-filter-index="<?php echo $task->status; ?>" >
                   <td>
+                    <span class="label label-success"><?php echo (new \DateTime($task->created))->format("d-m-Y"); ?></span>
+                  </td>
+                  <td>
                     <?php $label = ((new \DateTime("now")) <= (new \DateTime($task->deadline)) ? "label-primary" : "label-danger"); ?>
                     <span class="label <?php echo $label; ?>"><?php echo (new \DateTime($task->deadline))->format("d-m-Y"); ?></span>
 
                     <?php if( $task->status == 2 ): ?>
+                      &mdash;
                       <span class="label label-primary"><?php echo (new \DateTime($task->completed))->format("d-m-Y"); ?></span>
                     <?php endif; ?>
                   </td>
                   <td><?php echo $task->project; ?></td>
                   <td><?php echo $task->title; ?></td>
-                  <td><?php echo $task->description; ?></td>
                   <td>
                     <?php $action = ( $task->status == 1 ? 'close' : 'open' ); ?>
                     <form method="post" class="validator-form" action="/task/<?php echo "{$action}/{$task->_}"; ?>" novalidate="novalidate">
