--- a/apps/Manager/views/projects/index.phtml
+++ b/apps/Manager/views/projects/index.phtml
@@ -24,7 +24,7 @@
         <div class="panel-body no-padd">
           <div class="list-group no-margn mail-nav">
             <a href="/projects" class="list-group-item on">Projetos Cadastrados</a>
-            <a href="/projects/categories" class="list-group-item">Categorias</a>
+            <a href="/project/categories" class="list-group-item">Categorias</a>
           </div>
         </div>
       </div>
