--- a/apps/Manager/views/projects/categories.phtml
+++ b/apps/Manager/views/projects/categories.phtml
@@ -15,7 +15,7 @@
 
   <div class="row">
     <div class="col-md-2">
-      <button type="button" class="btn btn-success btn-block btn-circle" data-toggle="modal" data-target="#create">
+      <button type="button" class="btn btn-success btn-block btn-circle" data-toggle="modal" data-ajax="/project/categories/create">
         <span class="fa fa-plus"></span> Adicionar Categoria
       </button>
       <hr class="dotted">
@@ -24,7 +24,7 @@
         <div class="panel-body no-padd">
           <div class="list-group no-margn mail-nav">
             <a href="/projects" class="list-group-item">Projetos Cadastrados</a>
-            <a href="/projects/categories" class="list-group-item on">Categorias</a>
+            <a href="/project/categories" class="list-group-item on">Categorias</a>
           </div>
         </div>
       </div>
@@ -52,11 +52,11 @@
                   <td><?php echo $c->title; ?></td>
                   <td>
                     <div class="btn-group">
-                      <button type="button" class="btn btn-primary" data-ajax="/project/category/update/<?php echo $c->_ ;?>">
+                      <button type="button" class="btn btn-primary" data-ajax="/project/categories/modify/<?php echo $c->_ ;?>">
                         <span class="fa fa-pencil"></span>
                         Editar
                       </button>
-                      <button type="button" class="btn btn-danger" data-ajax="/project/category/remove/<?php echo $c->_ ;?>">
+                      <button type="button" class="btn btn-danger" data-ajax="/project/categories/remove/<?php echo $c->_ ;?>">
                         <span class="fa fa-close"></span>
                         Remover
                       </button>
