--- a/apps/Manager/views/projects/overview.phtml
+++ b/apps/Manager/views/projects/overview.phtml
@@ -80,7 +80,7 @@
                           <?php foreach ($members as $member): ?>
                             <tr>
                               <td class="avtar">
-                                <img src="/assets/manager/images/avtar/<?php echo $member->image; ?>" alt="<?php echo $member->name; ?>" class="img-circle avtar" />
+                                <img src="/assets/manager/images/avtar/<?php echo $uinfo->image ?: 'placeholder.jpg' ; ?>" alt="<?php echo $member->name; ?>" class="img-circle avtar" />
                               </td>
                               <td>
                                 <?php echo $member->name; ?><br>
